Detecta la mano ganadora. Falta añadir funcionalidad de desempate